--- a/Style.css
+++ b/Style.css
@@ -5,6 +5,8 @@
 body{
     margin: 0;
     padding: 0;
+    z-index: -10;
+    font-family: Helvetica, Sans-Serif;
 }
 
 nav {
@@ -13,6 +15,7 @@ nav {
     max-width: 1250px;
     padding: 25px;
     position: relative;
+    margin: auto;
 }
 
 nav .logo{
@@ -83,7 +86,7 @@ nav .nav .search input{
     position: relative;
 }
 
-.landing img{
+.landing .img img{
     width: 100%;
 }
 
@@ -107,18 +110,31 @@ nav .nav .search input{
     font-size: 12px;
     border: 1px solid black
 }
+.landing .description button:hover{
+    color:white;
+    background-color: rgb(12, 12, 12);
+    border: 1px solid white
+}
 
 footer{
+    
+    background: rgb(49, 49, 49);
+    width: 100%
+}
+
+.footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: rgb(49, 49, 49);
     padding: 20px 0 40px;
-    gap: 20px
+    gap: 20px;
+    max-width: 1250px;
+    margin: auto;
 }
 
-footer div{
+.footer div{
     width: 75%;
     display: flex;
     flex-direction: column;
@@ -126,27 +142,27 @@ footer div{
     align-items: flex-start;
 }
 
-footer div ul{
+.footer div ul{
     margin: 0;
     padding: 0;
     list-style: none;
     color: rgb(94, 94, 94);
 }
 
-footer div ul li{
+.footer div ul li{
     margin: 10px;
 }
 
-footer div:first-child ul{
+.footer div:first-child ul{
     width: 100%;
 }
 
-footer div:first-child ul li{
+.footer div:first-child ul li{
     margin: 0px;
     padding: 0;
 }
 
-footer div p{
+.footer div p{
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -221,7 +237,7 @@ body{
         font-size: 36px;
     }
 
-    footer{
+    .footer{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -232,7 +248,7 @@ body{
         flex-wrap: wrap;
     }
 
-    footer div{
+    .footer div{
         width: 40%;
         display: flex;
         flex-direction: column;
@@ -240,7 +256,7 @@ body{
         align-items: flex-start;
     }
 
-    footer div ul{
+    .footer div ul{
         margin: 0;
         padding: 0;
         list-style: none;
@@ -251,6 +267,11 @@ body{
 }
 
 @media only screen and (min-width: 1024px){
+    body{
+        min-height: 105vh;
+        padding-bottom: 280px;
+    }
+
     nav .nav{
         width: 40%
     }
@@ -259,12 +280,15 @@ body{
      padding: 50px 0;
         display: flex;
         flex-direction: row-reverse;
-        justify-content: center;
+        width: 100%;
+        max-width: 1250px;
+        margin :0 auto;
     }
 
     .landing .img{
         width: 60%;
     }
+    
     
     .landing .description{
         width: 40%;
@@ -293,17 +317,21 @@ body{
     footer{
         position: absolute;
         bottom: 0%;
+        
+        background: rgb(49, 49, 49);
+    }
+    .footer{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        background: rgb(49, 49, 49);
         padding: 20px 0 40px;
         gap: 30px;
         flex-wrap: wrap;
+        
     }
 
-    footer div{
+    .footer div{
         width: 20%;
         display: flex;
         flex-direction: column;
@@ -311,7 +339,7 @@ body{
         align-items: flex-start;
     }
 
-    footer div ul{
+    .footer div ul{
         margin: 0;
         padding: 0;
         list-style: none;
